@@ -1,6 +1,8 @@
 # Mikania-platform
 基于计算机视觉的薇甘菊识别防治可视化及科普平台
 
+**VM options配置 --add-opens java.base/java.util=ALL-UNNAMED**
+
 
 基于jdk17进行开发
 
